fix play/pause button overlap on mobile

--- a/src/components/playPauseButtons/playPauseButtons.css
+++ b/src/components/playPauseButtons/playPauseButtons.css
@@ -196,6 +196,11 @@
 }
 
 @media screen and (max-width: 675px) {
+  .play-pause-area {
+    margin-top: 3%;
+    margin-bottom: 2%;
+  }
+
   .play, .pause {
     border-top: 25px solid transparent;
     border-bottom: 25px solid transparent;
